--- a/Ekar/Localization/en.lproj/Localizable.strings
+++ b/Ekar/Localization/en.lproj/Localizable.strings
@@ -32,3 +32,5 @@
 "available.colors.title" = "Available colors";
 "tenure.title" = "Tenure";
 "contract.legth.title" = "1 to 9 Months";
+"key.features" = "Key Features";
+"sample.saving" = "SAVINGS OF AED 1,500";
